# oslo.version

./: README.rst  requirements.txt  setup.cfg
oslo_version/: _i18n.py  deprecated.py  releases.py
