[metadata]
name = oslo.version
summary = All things about OpenStack versions.
description-file =
    README.rst
author = OpenStack Developers
author-email = oslo@lists.launchpad.net
home-page = https://launchpad.net/oslo
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Libraries
    Topic :: System :: Distributed Computing

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    oslo_version
